[package]
name = "inet-aton"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Converts IPv4 addresses from byte string to integer using SIMD."
documentation = "https://docs.rs/inet-aton"
repository = "https://github.com/inflation/inet-aton"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
proptest = "1.2.0"
